Updated product page
Updated copywrite
Added underline to home page

--- a/product.html
+++ b/product.html
@@ -145,7 +145,7 @@
     <!-- end of single item -->
 </section>
 <div class="btn-container">
-  <button class="loc-btn">See Location</button>
+  <button class="button">See Location</button>
 </div>
 
 <!--Footer-->
