--- a/index.html
+++ b/index.html
@@ -74,15 +74,16 @@
   <div class="column1">
     <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
   </div>
+  <div class="underline"></div>
   <div class="column2">
-  <h4>Summatime Fine!</h4>
-  <h2>TV STANDS</h2>
-  <p>Island Chairs for the kitchen.</p><br />
-    <p>SIDE TABLES TO REST THE SNACK & DRINK ON</p> <br />
-  <p>Refresh your home for summer.<br />
+  <h4>Summatime Fresh</h4>
+  <h2>Neutral, Warm and Cozy</h2>vscode-file://vscode-app/c:/Users/Virginia/Downloads/VSCode-win32-x64-1.78.2/resources/app/out/vs/code/electron-sandbox/workbench/workbench.html
+  <p>Kitchen Island Chairs</p><br />
+    <p>TV Consoles</p> <br />
+  <p>and more.<br />
     PIECES AVAILABLE IN LIGHT WOOD, GLASS AND STEEL</p>
   <p> In-person Drop: June 1</p>
-<a href="product.html" target="_self"><button class="loc-btn">See Now</button></a>
+<a href="product.html" target="_self"><button class="filter-btn">See Now</button></a>
   </div>
 </div>
 
@@ -96,11 +97,17 @@
     <p id="demo"></p>
 
     <div id= "brand-promise">
-     <h1>We(Chattel) provide improvement pieces & objects,<br />
+     <!--<h1>We(Chattel Summer) provides gently used improvement pieces,<br />
           in-person drops in Barbados.<br/>
         </br/>
           We hope to inspire you to design a<br />
           beautiful home.<br />
+      </h1>-->
+
+      <h1>An amazingly styled home with nice furnishings<br>
+        is attainable. Chattel Summer provides gently used furniture pieces to complete<br>
+        your home. We price fairly and show 360 views of pieces so<br>
+        you can make the right investment to your lifestyle.  
       </h1>
     </div>
 
@@ -138,26 +145,28 @@
   <div class="column1">
     <h3></h3>
     <h2>BE THE FIRST TO SEE WHAT'S COMING IN THE NEXT DROP</h2>
-    <p>Sign up to preview new items first.</p>
+    <p>Sign up to preview new items first<br>
+    or to see unique, one-of-a kind pieces available by invitation only.</p>
     <p></p><br />
       <p></p> <br />
     <p></p>
     <p> </p>
-    <a href= "mail.html" target="_blank"><button class="loc-btn">Yes-Show Me</button></a>
+    <a href= "mail.html" target="_blank"><button class="filter-btn">Yes-Show Me</button></a>
 
   </div>
-
+  <div class="underline"></div>
   <div class="column2">
     <h3></h3>
     <h2>PEEK THE DROP VIDEOS</h2>
     <!--<h2>PEEK THE DROP PRICES</h2>-->
-    <p>You can get a closer look at the details and get an idea of length, width and height when we measure the items 
-      in real time.</p>
+    <p>get a closer look at furniture and appliances details<br>
+       length, width and height. We measure items in real time in the videos so<br>
+       you can complete your home.</p>
     <p></p><br />
       <p></p> <br />
     <p></p>
     <p> In-person Drop: June 1</p>
-    <a href= "https://www.instagram.com/chattelboard/" target="_blank"><button class="loc-btn">See Videos</button></a>
+    <a href= "https://www.instagram.com/chattelboard/" target="_blank"><button class="filter-btn">See Videos</button></a>
 <!--<a href= "" target="_blank"><button class="loc-btn">See Drop</button></a>-->
   </div>
 </div>
