--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <div class="underline"></div>
   <div class="column2">
   <h4>Summatime Fresh</h4>
-  <h2>Neutral, Warm and Cozy</h2>vscode-file://vscode-app/c:/Users/Virginia/Downloads/VSCode-win32-x64-1.78.2/resources/app/out/vs/code/electron-sandbox/workbench/workbench.html
+  <h2>Neutral, Warm and Cozy</h2>
   <p>Kitchen Island Chairs</p><br />
     <p>TV Consoles</p> <br />
   <p>and more.<br />
