--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <h3></h3>
     <h2>PEEK THE DROP VIDEOS</h2>
     <!--<h2>PEEK THE DROP PRICES</h2>-->
-    <p>get a closer look at furniture and appliances details<br>
+    <p>Get a closer look at furniture and appliances details<br>
        length, width and height. We measure items in real time in the videos so<br>
        you can complete your home.</p>
     <p></p><br />
