--- a/index.html
+++ b/index.html
@@ -105,8 +105,11 @@
       </h1>-->
 
       <h1>An amazingly styled home with nice furnishings<br>
-        is attainable. Chattel Summer provides gently used furniture pieces to complete<br>
-        your home. We price fairly and show 360 views of pieces so<br>
+        is attainable. <br><br>
+        Chattel Summer provides gently used furniture pieces to complete
+        your home. 
+        <br>
+        We price fairly and show 360 views of pieces so<br>
         you can make the right investment to your lifestyle.  
       </h1>
     </div>
