--- a/mail.html
+++ b/mail.html
@@ -1,4 +1,4 @@
-<?php include 'sendemail.php'; ?>
+<?php include 'form.php'; ?>
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -72,7 +72,7 @@
     <?php echo $alert; ?>
     <!--alert messages end-->
     <center>
-        <form class="contact" action="form.php" method="post"><br><br>
+        <form class="contact" action="form.php" method="POST"><br><br>
           <input type="text" name="name" class="text-box" placeholder="Your Name" required><br><br>
           <input type="email" name="email" class="text-box" placeholder="Your Email" required><br><br>
           <textarea name="message" rows="5" placeholder="Your Message" ></textarea><br><br>
