--- a/mail.html
+++ b/mail.html
@@ -1,4 +1,3 @@
-<?php include 'sendmail.php'; ?>
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -71,8 +70,9 @@
     <!--alert messages start-->
     <?php echo $alert; ?>
     <!--alert messages end-->
+    
     <center>
-        <form class="contact" action="sendmail.php" method="POST"><br><br>
+        <form class="contact" action="send-mail.php" method="post"><br><br>
           <input type="text" name="name" class="text-box" placeholder="Your Name" required><br><br>
           <input type="email" name="email" class="text-box" placeholder="Your Email" required><br><br>
           <textarea name="message" rows="5" placeholder="Your Message" ></textarea><br><br>
