--- a/mail.html
+++ b/mail.html
@@ -72,7 +72,7 @@
     <!--alert messages end-->
     
     <center>
-        <form class="contact" action="send-mail.php" method="post"><br><br>
+        <form class="contact" action="sendmail.php" method="post"><br><br>
           <input type="text" name="name" class="text-box" placeholder="Your Name" required><br><br>
           <input type="email" name="email" class="text-box" placeholder="Your Email" required><br><br>
           <textarea name="message" rows="5" placeholder="Your Message" ></textarea><br><br>
