--- a/sent.html
+++ b/sent.html
@@ -10,7 +10,7 @@
     <h1>Contact</h1>
     
     <p>Thank you for your message.</p>
-    <a href= "index.html" target="_blank"><button class="filter-btn">See Videos</button></a>
+    <a href= "index.html" target="_blank"><button class="filter-btn">Go to Home</button></a>
     
 </body>
 </html>
