--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="product.html">shop</a>
         </li>
         <li>
-          <a href="mail.html">first look</a>
+          <a href="mail2.html">first look</a>
         </li>
       </ul>
       <!-- social media -->
