--- a/mail.html
+++ b/mail.html
@@ -72,11 +72,13 @@
     <!--alert messages end-->
     
     <center>
-        <form class="contact" action="send-mail.php" method="post"><br><br>
+        <h2>Have a first look at Drop Updates</h2>
+        <form class="contact" action="https://formsubmit.co/chattelenterprise@gmail.com" method="post"><br><br>
           <input type="text" name="name" class="text-box" placeholder="Your Name" required><br><br>
           <input type="email" name="email" class="text-box" placeholder="Your Email" required><br><br>
           <textarea name="message" rows="5" placeholder="Your Message" ></textarea><br><br>
           <input type="submit" name="submit" class="send-btn" value="Submit">
+          <input type="hidden" name="_captcha" value="false">
         </form>
  <center>
  <!--contact section end-->
