Updated AD blocks 07/18
Wrote better copy in Ad Block

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
   </div>
 
   <div class="column2">
-  <h4>Summatime Fresh</h4>
-  <h2>Neutral, Warm and Cozy</h2>
-  <p>Kitchen Island Chairs</p><br />
-    <p>TV Consoles</p> <br />
-  <p>and more.<br />
-    PIECES AVAILABLE IN LIGHT WOOD, GLASS AND STEEL</p>
+  <h4></h4>
+  <h2>GET YA LIFE TOGETHER</h2>
+  <p class="capitalise">Restock and reorganise </p><br />
+    <p class="capitalise">with multi-shelf cabinets</p> <br />
+  <p><br />
+    LIMITED PIECES AVAILABLE IN LIGHT WOOD, GLASS AND STEEL</p>
   <p> In-person Drop: June 1</p>
 <a href="product.html" target="_self"><button class="filter-btn">See Now</button></a>
   </div>
@@ -104,15 +104,27 @@
           beautiful home.<br />
       </h1>-->
 
-      <h1>An amazingly styled home with nice furnishings<br>
+      <!--<h1>An amazingly styled home with nice furnishings<br>
         is attainable. <br><br>
         Chattel Summer provides gently used furniture pieces to complete
         your home. 
         <br>
         We price fairly and show 360 views of pieces so<br>
         you can make the right investment to your lifestyle.  
+      </h1>-->
+
+      <h1>Hi, we're Chattel Summer</h1>
+      <h1>We create new commforts in your home 
+        with a collection of home furnishings and housewares
+        that make your home clutter-free, organised
+        pretty enjoyable like summer vacations.
+
+      <p>PSA:Furnishing you see will be pre-owned at this time.</p>
       </h1>
+
     </div>
+      
+
 
   <!--  <div class="launch-time">
       <div>
@@ -147,30 +159,30 @@
 <div class="row">
   <div class="column1">
     <h3></h3>
-    <h2>BE THE FIRST TO SEE WHAT'S COMING IN THE NEXT DROP</h2>
-    <p>Sign up to preview new items first<br>
-    or to see unique, one-of-a kind pieces available by invitation only.</p>
-    <p></p><br />
-      <p></p> <br />
+    <h2>Out of Sight, Out of Mind</h2>
+    <p> Clutter-free pieces <br>
+    </p>
+    <p> for your peace of mind </p><br />
+      <p>Watch 360 degree view furnishing video now  </p> <br />
     <p></p>
     <p> </p>
-    <a href= "mail.html" target="_blank"><button class="filter-btn">Yes-Show Me</button></a>
+    <a href= "https://www.instagram.com/chattelboard/" target="_blank"><button class="filter-btn">Yes-Show Me</button></a>
 
   </div>
 
   <div class="column2">
-    <h3></h3>
-    <h2>PEEK THE DROP VIDEOS</h2>
+    <h3>PEEK THE UPDATE 1ST</h3>
+    <h2 class="uppercase"> Well deserved Money Spent</h2>
     <!--<h2>PEEK THE DROP PRICES</h2>-->
-    <p>Get a closer look at furniture and appliances details<br>
-       length, width and height. We measure items in real time in the videos so<br>
-       you can complete your home.</p>
-    <p></p><br />
+    <p class="uppercase">Cheer up your space with<br>
+       stylish chairs and tables<br>
+       </p>
+    <a href="mail.html"><p>SIGN UP TODAY TO GET PRIORITY UPDATES FIRST</p></a><br />
       <p></p> <br />
     <p></p>
     <p> In-person Drop: June 1</p>
     <a href= "https://www.instagram.com/chattelboard/" target="_blank"><button class="filter-btn">See Videos</button></a>
-<!--<a href= "" target="_blank"><button class="loc-btn">See Drop</button></a>-->
+<!--<a href= "https://www.instagram.com/chattelboard/" target="_blank"><button class="loc-btn">See Drop</button></a>-->
   </div>
 </div>
 
