--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
   <div class="column2">
   <h4></h4>
   <h2>GET YA LIFE TOGETHER</h2>
-  <p class="capitalise">Restock and reorganise </p><br />
-    <p class="capitalise">with multi-shelf cabinets</p> <br />
-  <p><br />
+  <p class="capitalise">Restock and reorganise </p>
+    <p class="capitalise">with multi-shelf cabinets</p>
+  <p>
     LIMITED PIECES AVAILABLE IN LIGHT WOOD, GLASS AND STEEL</p>
   <p> In-person Drop: June 1</p>
 <a href="product.html" target="_self"><button class="filter-btn">See Now</button></a>
