--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <p class="uppercase">Cheer up your space with<br>
        stylish chairs and tables<br>
        </p>
-    <a href="mail.html"><p class="underline">CLICK ME- TO SIGN UP FOR PRIORITY UPDATES FIRST</p></a><br />
+    <a href="mail.html"><p class="gold">CLICK ME- TO SIGN UP FOR PRIORITY UPDATES FIRST</p></a><br />
       <p></p> <br />
     <p></p>
     <p> In-person Drop: June 1</p>
