--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
   <div class="column2">
   <h4></h4>
   <h2>GET YA LIFE TOGETHER</h2>
-  <p>Restock and reorganise </p>
-    <p>with multi-shelf cabinets</p><br>
+  <p class="uppercase">Restock and reorganise </p>
+    <p class="uppercase">with multi-shelf cabinets</p><br>
   <p>LIMITED PIECES AVAILABLE IN LIGHT WOOD, GLASS AND STEEL</p><br>
   <p> In-person Drop: June 1</p>
 <a href="product.html" target="_self"><button class="filter-btn">See Now</button></a>
@@ -158,14 +158,14 @@
 <div class="row">
   <div class="column1">
     <h3></h3>
-    <h2>Out of Sight, Out of Mind</h2>
-    <p> Clutter-free pieces <br>
+    <h2 class="uppercase">Out of Sight, Out of Mind</h2>
+    <p class="uppercase"> Clutter-free pieces <br>
     </p>
-    <p> for your peace of mind </p><br />
+    <p class="uppercase"> for your peace of mind </p><br />
       <p>Watch 360 degree view furnishing video now  </p> <br />
     <p></p>
     <p> </p>
-    <a href= "https://www.instagram.com/chattelboard/" target="_blank"><button class="filter-btn">Yes-Show Me</button></a>
+    <a href= "https://www.instagram.com/chattelboard/" target="_blank"><button class="filter-btn" class="uppercase">Yes-Show Me</button></a>
 
   </div>
 
