--- a/index.html
+++ b/index.html
@@ -164,8 +164,7 @@
     <p class="uppercase"> for your peace of mind </p><br />
       <p>Watch 360 degree view furnishing video now  </p> <br />
     <p></p>
-    <p> </p>
-    <a href= "https://www.instagram.com/chattelboard/" target="_blank"><button class="filter-btn" class="uppercase">Yes-Show Me</button></a>
+    <a href= "https://www.instagram.com/chattelboard/" target="_blank"><button class="filter-btn">Yes-Show Me</button></a>
 
   </div>
 
