--- a/index.html
+++ b/index.html
@@ -76,13 +76,66 @@
   </div>
 
   <div class="column2">
-  <h4></h4>
-  <h2>GET YA LIFE TOGETHER</h2>
-  <p class="uppercase">Restock and reorganise </p>
-    <p class="uppercase">with multi-shelf cabinets</p><br>
+  <h4 class="underline">Chattel Summer</h4>
+  <h2>Hi, Get ready to explore the collection:home furnishings and housewares</h2>  
+  <h>Discover finds which have been preowned and gently used from a range of private collections
+    and dealers.</h2>
+  <p class="uppercase">Here's what we want you to do</p>
+    <p class="uppercase">A. See the Collection up close with photos.</p><br>
+  <p>B. Get a closer look at the Collection with videos. </p><br>
+  <p> C. Get priority notification of in-person shopping dates + upcoming collections.</p>
+
+  </div>
+</div>
+
+<div class="row">
+  <div class="column1">
+    <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 80%">
+  </div>
+
+  <div class="column2">
+   <h1 class="uppercase">Photos</h1> <br>
+  <h4 class="uppercase">get ya life together</h4>
+  <h2 class="uppercase">Restock and reorganise</h2>
+  <p class="uppercase">with multi-shelf cabinets</p>
+    <p class="uppercase"></p><br>
   <p>LIMITED PIECES AVAILABLE IN LIGHT WOOD, GLASS AND STEEL</p><br>
   <p> In-person Drop: June 1</p>
-<a href="product.html" target="_self"><button class="filter-btn">See Now</button></a>
+<a href="product.html" target="_self"><button class="filter-btn">Preview Photos</button></a>
+  </div>
+</div>
+
+<div class="row">
+  <div class="column1">
+    <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 80%">
+  </div>
+
+  <div class="column2">
+    <h1 class="uppercase">Videos</h1> <br> 
+  <h4 class="uppercase">get ya life together</h4>
+  <h2 class="uppercase">Clutter Free Pieces </h2>
+  <p class="uppercase">for peace of mind</p>
+    <p class="uppercase"></p><br>
+  <p>LIMITED PIECES AVAILABLE IN LIGHT WOOD, GLASS AND STEEL</p><br>
+  <p> In-person Drop: June 1</p>
+<a href="product.html" target="_self"><button class="filter-btn">Preview Videos</button></a>
+  </div>
+</div>
+
+<div class="row">
+  <div class="column1">
+    <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 80%">
+  </div>
+
+  <div class="column2">
+    <h1 class="uppercase">Email or Phone notifications</h1> <br> 
+  <h4 class="uppercase">Get reminders for</h4>
+  <h2 class="uppercase"> in-person shopping dates</h2>
+  <p class="uppercase">+</p>
+    <p class="uppercase">upcoming collections</p><br>
+  <p class="upperclass"></p><br>
+  <p></p>
+<a href="product.html" target="_self"><button class="filter-btn">Sign Me Up!</button></a>
   </div>
 </div>
 
@@ -112,14 +165,11 @@
         you can make the right investment to your lifestyle.  
       </h1>-->
 
-      <h1>Hi, we're Chattel Summer</h1>
-      <h1>We create new commforts in your home 
-        with a collection of home furnishings and housewares
-        that make your home clutter-free, organised
-        pretty enjoyable like summer vacations.
-
-      <p>PSA:Furnishing you see will be pre-owned at this time.</p>
-      </h1>
+      <h3 class="underline">About Us</h3>
+      <h4>We create new home comforts 
+        with home furnishings and housewares
+        for clutter-freeness, organisation and
+        summer vacation-like enjoyment.</h4>
 
     </div>
       
@@ -155,7 +205,7 @@
 
 
 <!--start three-->
-<div class="row">
+<!--<div class="row">
   <div class="column1">
     <h3></h3>
     <h2 class="uppercase">Out of Sight, Out of Mind</h2>
@@ -171,7 +221,6 @@
   <div class="column2">
     <h3>PEEK THE UPDATE 1ST</h3>
     <h2 class="uppercase"> Well deserved Money Spent</h2>
-    <!--<h2>PEEK THE DROP PRICES</h2>-->
     <p class="uppercase">Cheer up your space with<br>
        stylish chairs and tables<br>
        </p>
@@ -180,9 +229,8 @@
     <p></p>
     <p> In-person Drop: June 1</p>
     <a href= "https://www.instagram.com/chattelboard/" target="_blank"><button class="filter-btn">See Videos</button></a>
-<!--<a href= "https://www.instagram.com/chattelboard/" target="_blank"><button class="loc-btn">See Drop</button></a>-->
   </div>
-</div>
+</div>-->
 
 <!--end three-->
 
