--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <p class="uppercase"></p><br>
   <p>LIMITED PIECES AVAILABLE IN LIGHT WOOD, GLASS AND STEEL</p><br>
   <p> In-person Drop: June 1</p>
-<a href="product.html" target="_self"><button class="filter-btn">Preview Videos</button></a>
+<a href="https://www.instagram.com/chattelboard/" target="_self"><button class="filter-btn">Preview Videos</button></a>
   </div>
 </div>
 
@@ -135,7 +135,7 @@
     <p class="uppercase">upcoming collections</p><br>
   <p class="upperclass"></p><br>
   <p></p>
-<a href="product.html" target="_self"><button class="filter-btn">Sign Me Up!</button></a>
+<a href="mail.html" target="_self"><button class="filter-btn">Sign Me Up!</button></a>
   </div>
 </div>
 
@@ -165,11 +165,12 @@
         you can make the right investment to your lifestyle.  
       </h1>-->
 
-      <h3 class="underline">About Us</h3>
-      <h4>We create new home comforts 
+      <h3 class="underline"></h3>
+      <h2>About Us</h2>
+      <p>We create new home comforts 
         with home furnishings and housewares
         for clutter-freeness, organisation and
-        summer vacation-like enjoyment.</h4>
+        summer vacation-like enjoyment.</p>
 
     </div>
       
