--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
   </div>
 
   <div class="column2">
-  <h4 class="underline">Chattel Summer</h4>
-  <h2>Hi, Get ready to explore the collection:home furnishings and housewares</h2>  
-  <h>Discover finds which have been preowned and gently used from a range of private collections
+    <h2>Chattel Summer</h2>
+  <h4 class="underline"></h4>
+  <h4>Hi, Get ready to explore the collection:home furnishings and housewares</h4>  
+  <h2>Discover finds which have been preowned and gently used from a range of private collections
     and dealers.</h2>
   <p class="uppercase">Here's what we want you to do</p>
     <p class="uppercase">A. See the Collection up close with photos.</p><br>
