--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
   <h2>Discover finds which have been preowned and gently used from a range of private collections
     and dealers.</h2>
   <p class="uppercase">Here's what we want you to do</p>
-    <p class="uppercase">A. See the Collection up close with photos.</p><br>
-  <p>B. Get a closer look at the Collection with videos. </p><br>
-  <p> C. Get priority notification of in-person shopping dates + upcoming collections.</p>
+    <p class="uppercase">A. See the Collection up close with photos.</p>
+  <p class="uppercase">B. Get a closer look at the Collection with videos. </p>
+  <p class="uppercase"> C. Get priority notification of in-person shopping dates + upcoming collections.</p>
 
   </div>
 </div>
