--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
 
       <h3 class="underline"></h3>
       <h2>About Us</h2>
-      <p>We create new home comforts 
-        with home furnishings and housewares
-        for clutter-freeness, organisation and
+      <p>We create new home comforts<br> 
+        with home furnishings and housewares<br>
+        for clutter-freeness, organisation and<br>
         summer vacation-like enjoyment.</p>
 
     </div>
