--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
       <h3 class="underline"></h3>
       <h2>About Us</h2>
       <p>We create new home comforts<br> 
-        with home furnishings and housewares<br>
-        for clutter-freeness, organisation and<br>
+        with home furnishings and<br> housewares
+        for clutter-freeness,<br> organisation and
         summer vacation-like enjoyment.</p>
 
     </div>
