--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row1">
   <div class="column1">
     <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 80%">
   </div>
@@ -106,7 +106,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row1">
   <div class="column1">
     <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 80%">
   </div>
@@ -123,7 +123,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row1">
   <div class="column1">
     <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 80%">
   </div>
