--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
   <h4 class="uppercase">get ya life together</h4>
   <h2 class="uppercase">Restock and reorganise</h2>
   <p class="uppercase">with multi-shelf cabinets</p>
-    <p class="uppercase"></p><br>
-  <p>LIMITED PIECES AVAILABLE IN LIGHT WOOD, GLASS AND STEEL</p><br>
+    <!--<p class="uppercase"></p><br>-->
+  <p>LIMITED PIECES AVAILABLE</p>
   <p> In-person Drop: June 1</p>
 <a href="product.html" target="_self"><button class="filter-btn">Preview Photos</button></a>
   </div>
@@ -116,8 +116,8 @@
   <h4 class="uppercase">get ya life together</h4>
   <h2 class="uppercase">Clutter Free Pieces </h2>
   <p class="uppercase">for peace of mind</p>
-    <p class="uppercase"></p><br>
-  <p>LIMITED PIECES AVAILABLE IN LIGHT WOOD, GLASS AND STEEL</p><br>
+    <!--<p class="uppercase"></p><br>-->
+  <p>LIMITED PIECES AVAILABLE</p>
   <p> In-person Drop: June 1</p>
 <a href="https://www.instagram.com/chattelboard/" target="_self"><button class="filter-btn">Preview Videos</button></a>
   </div>
@@ -134,8 +134,8 @@
   <h2 class="uppercase"> in-person shopping dates</h2>
   <p class="uppercase">+</p>
     <p class="uppercase">upcoming collections</p><br>
-  <p class="upperclass"></p><br>
-  <p></p>
+  <!--<p class="upperclass"></p><br>
+  <p></p>-->
 <a href="mail.html" target="_self"><button class="filter-btn">Sign Me Up!</button></a>
   </div>
 </div>
