--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 
   <div class="column2">
     <h1 class="uppercase">Videos</h1> <br> 
-  <h4 class="uppercase">get ya life together</h4>
-  <h2 class="uppercase">Clutter Free Pieces </h2>
-  <p class="uppercase">for peace of mind</p>
+  <h4>class="uppercase">get ya life together</h4>
+  <h2> class="uppercase">Clutter Free Pieces </h2>
+  <p>class="uppercase">for peace of mind</p>
     <!--<p class="uppercase"></p><br>-->
   <p>LIMITED PIECES AVAILABLE</p>
   <p> In-person Drop: June 1</p>
