--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 <div class="row1">
   <div class="column1">
-    <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 80%">
+    <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
   </div>
 
   <div class="column3">
@@ -108,24 +108,21 @@
 
 <div class="row">
   <div class="column1">
-    <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 80%">
+    <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
   </div>
 
   <div class="column3">
     <h1 class="uppercase">Videos</h1> <br> 
-  <h4 class="uppercase">get ya life together</h4>
-  <h2 class="uppercase">Clutter Free Pieces </h2>
-  <p class="uppercase">for peace of mind</p>
-    <!--<p class="uppercase"></p><br>-->
-  <p>LIMITED PIECES AVAILABLE</p>
-  <p> In-person Drop: June 1</p>
+  <h4 class="uppercase">Clutter Free Pieces</h4>
+  <h2 class="uppercase">for peace of mind </h2>
+  <p class="uppercase">In-person Drop: June 1</p>
 <a href="https://www.instagram.com/chattelboard/" target="_self"><button class="filter-btn">Preview Videos</button></a>
   </div>
 </div>
 
 <div class="row1">
   <div class="column0">
-    <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 80%">
+    <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
   </div>
 
   <div class="column3">
