--- a/index.html
+++ b/index.html
@@ -113,9 +113,12 @@
 
   <div class="column3">
     <h1 class="uppercase">Videos</h1> <br> 
-  <h4 class="uppercase">Clutter Free Pieces</h4>
-  <h2 class="uppercase">for peace of mind </h2>
-  <p class="uppercase">In-person Drop: June 1</p>
+  <h4 class="uppercase">get ya life together</h4>
+  <h2 class="uppercase">Clutter Free Pieces </h2>
+  <p class="uppercase">for peace of mind</p>
+    <!--<p class="uppercase"></p><br>-->
+  <p>LIMITED PIECES AVAILABLE</p>
+  <p> In-person Drop: June 1</p>
 <a href="https://www.instagram.com/chattelboard/" target="_self"><button class="filter-btn">Preview Videos</button></a>
   </div>
 </div>
