--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
 <!--Start one-->
 
-<div class="row">
-  <div class="column1">
+<div class="row1">
+  <div class="column0">
     <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
   </div>
 
@@ -87,7 +87,7 @@
 </div>
 
 <div class="row1">
-  <div class="column1">
+  <div class="column0">
     <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
   </div>
 
@@ -103,8 +103,8 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="column1">
+<div class="row1">
+  <div class="column0">
     <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
   </div>
 
