--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <h4 class="underline"></h4>
   <h4>Hi, Get ready to explore the collection:home furnishings and housewares</h4>  
   <h2>Discover finds which have been preowned and gently used from a range of private collections
-    and dealers.</h2>
+    and dealers.</h2><br>
 
 
   </div>
@@ -98,7 +98,7 @@
   <p class="uppercase">with multi-shelf cabinets</p>
     <!--<p class="uppercase"></p><br>-->
   <p>LIMITED PIECES AVAILABLE</p>
-  <p> In-person Drop: June 1</p>
+  <p> In-person Drop: June 1</p><br>
 <a href="product.html" target="_self"><button class="filter-btn">Preview Photos</button></a>
   </div>
 </div>
@@ -115,7 +115,7 @@
   <p class="uppercase">for peace of mind</p>
     <!--<p class="uppercase"></p><br>-->
   <p>LIMITED PIECES AVAILABLE</p>
-  <p> In-person Drop: June 1</p>
+  <p> In-person Drop: June 1</p><br>
 <a href="https://www.instagram.com/chattelboard/" target="_self"><button class="filter-btn">Preview Videos</button></a>
   </div>
 </div>
