--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 <!--Start one-->
 
 <div class="row">
-  <div class="column1">
+ <!-- <div class="column1">
     <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
-  </div>
+  </div>-->
 
   <div class="column2">
     <h2>Chattel Summer</h2>
