--- a/index.html
+++ b/index.html
@@ -104,12 +104,13 @@
 </div>
 
 <div class="row">
-  <div class="column1">
+  <!--<div class="column1">
     <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
-  </div>
+  </div>-->
 
   <div class="column3">
     <h1 class="uppercase">Videos</h1> <br> 
+    <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
   <h4 class="uppercase">get ya life together</h4>
   <h2 class="uppercase">Clutter Free Pieces </h2>
   <p class="uppercase">for peace of mind</p>
