--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
 
   <div class="column3">
     <h1 class="uppercase">Videos</h1> <br> 
+    <div class="column1">
     <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
+  </div>
   <h4 class="uppercase">get ya life together</h4>
   <h2 class="uppercase">Clutter Free Pieces </h2>
   <p class="uppercase">for peace of mind</p>
