--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <h2>Chattel Summer</h2>
   <h4 class="underline"></h4>
   <h4>Hi, Get ready to explore the collection:home furnishings and housewares</h4>  
-  <h2>Discover finds which have been preowned and gently used from a range of private collections
+  <h2>Discover finds which have<br> been preowned and gently<br> used from a range of <br>private collections
     and dealers.</h2><br>
 
 
@@ -104,15 +104,12 @@
 </div>
 
 <div class="row">
-  <!--<div class="column1">
+  <div class="column1">
     <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
-  </div>-->
+  </div>
 
   <div class="column3">
     <h1 class="uppercase">Videos</h1> <br> 
-    <div class="column1">
-    <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
-  </div>
   <h4 class="uppercase">get ya life together</h4>
   <h2 class="uppercase">Clutter Free Pieces </h2>
   <p class="uppercase">for peace of mind</p>
