--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <aside class="sidebar">
       <div class="sidebar-header">
         <button class="close-btn"><i class="fas fa-times"></i></button>
-        <img src="Images/Your paragraph text.png" class="logophoto" alt="" />
+        <img src="Images/Your paragraph text.png" class="logophoto" alt="chattel Summer logo" />
         <!--<button class="close-btn"><i class="fas fa-times"></i></button>-->
       </div>
       <!-- links -->
@@ -38,19 +38,19 @@
         </li>
       </ul>
       <!-- social media -->
-      <ul class="social-icons no-bullets">
+      <!--<ul class="social-icons no-bullets">
         <li>
           <a href="https://www.twitter.com">
             <i class="fab fa-facebook"></i>
           </a>
         </li>
         <li>
-          <a href="https://www.twitter.com">
+          <a href="">
             <i class="fab fa-youtube"></i>
           </a>
         </li>
-        <li>
-          <a href="https://www.instagram.com/chattelboard/">
+        <li>-->
+          <a href="https://www.instagram.com/chattelsummer/">
             <i class="fab fa-instagram"></i>
           </a>
         </li>
@@ -60,8 +60,8 @@
           </a>
         </li>
         <li>
-          <a href="https://www.twitter.com">
-            <i class="fab fa-instagram"></i>
+          <a href="https://www.tiktok.com/@chattelsummer?lang=en">
+            <i class="fab fa-tiktok"></i>
           </a>
         </li>-->
       </ul>
@@ -616,7 +616,7 @@
         </ul>
 
         <ul class= "footer_links-social no-bullets">
-          <li>
+          <!--<li>
             <a href="https://www.twitter.com">
               <i class="fab fa-facebook"></i>
             </a>
@@ -625,9 +625,9 @@
             <a href="https://www.twitter.com">
               <i class="fab fa-youtube"></i>
             </a>
-          </li>
+          </li>-->
           <li>
-            <a href="https://www.instagram.com/chattelboard/">
+            <a href="https://www.instagram.com/chattelsummer/">
               <i class="fab fa-instagram"></i>
             </a>
           </li>
