--- a/mail.html
+++ b/mail.html
@@ -18,7 +18,7 @@
     <aside class="sidebar">
       <div class="sidebar-header">
         <button class="close-btn"><i class="fas fa-times"></i></button>
-        <img src= "Images/Your paragraph text.png" class="logophoto" alt="" />
+        <img src= "Images/Your paragraph text.png" class="logophoto" alt="Chattel Summer Logo" />
         <!--<button class="close-btn"><i class="fas fa-times"></i></button>-->
       </div>
       <!-- links -->
@@ -38,7 +38,7 @@
       </ul>
       <!-- social media -->
       <ul class="social-icons no-bullets">
-        <li>
+        <!--<li>
           <a href="https://www.twitter.com">
             <i class="fab fa-facebook"></i>
           </a>
@@ -47,9 +47,9 @@
           <a href="https://www.twitter.com">
             <i class="fab fa-youtube"></i>
           </a>
-        </li>
+        </li>-->
         <li>
-          <a href="https://www.instagram.com/chattelboard/">
+          <a href="https://www.instagram.com/chattelsummer/">
             <i class="fab fa-instagram"></i>
           </a>
         </li>
@@ -76,7 +76,10 @@
         <form class="contact" action="https://formsubmit.co/chattelenterprise@gmail.com" method="post"><br><br>
           <input type="text" name="name" class="text-box" placeholder="Your Name" required><br><br>
           <input type="email" name="email" class="text-box" placeholder="Your Email" required><br><br>
-          <textarea name="message" rows="5" placeholder="Your Message" ></textarea><br><br>
+        <label for="phone">Get Reminders via Whatsapp too</label>  
+        <input type="tel" name="cellphone" class="text-box" placeholder="1(246)-123-4567" 
+        pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{4}"> 
+          <!--<textarea name="message" rows="5" placeholder="Your Message" ></textarea>--><br><br>
           <input type="submit" name="submit" class="send-btn" value="Submit">
           <input type="hidden" name="_captcha" value="false">
         </form>
