--- a/product.html
+++ b/product.html
@@ -44,7 +44,7 @@
       </ul>
       <!-- social media -->
       <ul class="social-icons no-bullets">
-        <li>
+        <!--<li>
           <a href="https://www.twitter.com">
             <i class="fab fa-facebook"></i>
           </a>
@@ -53,9 +53,9 @@
           <a href="https://www.twitter.com">
             <i class="fab fa-youtube"></i>
           </a>
-        </li>
+        </li>-->
         <li>
-          <a href="https://www.instagram.com/chattelboard/">
+          <a href="https://www.instagram.com/chattelsummer/">
             <i class="fab fa-instagram"></i>
           </a>
         </li>
@@ -184,17 +184,17 @@
           <li>
             <a href="index.html">our story</a>
           </li>
-          <li>
-            <a href="about.html">contact us</a>
+          <!--<li>
+            <a href="">contact us</a>
           </li>
           <li>
             <a href=".html"></a>
-          </li>
+          </li>-->
         </ul>
 
         <ul class= "footer_links-social no-bullets">
           <li>
-            <a href="https://www.twitter.com">
+            <!--<a href="https://www.twitter.com">
               <i class="fab fa-facebook"></i>
             </a>
           </li>
@@ -202,9 +202,9 @@
             <a href="https://www.twitter.com">
               <i class="fab fa-youtube"></i>
             </a>
-          </li>
+          </li>-->
           <li>
-            <a href="https://www.instagram.com/chattelboard/">
+            <a href="https://www.instagram.com/chattelsummer/">
               <i class="fab fa-instagram"></i>
             </a>
           </li>
