--- a/how-it-works.html
+++ b/how-it-works.html
@@ -38,12 +38,12 @@
       </ul>
       <!-- social media -->
       <ul class="social-icons no-bullets">
-        <li>
+        <!--<li>
           <a href="https://www.twitter.com">
             <i class="fab fa-facebook"></i>
           </a>
         </li>
-        <!--<li>
+        <li>
         <a href="https://www.twitter.com">
             <i class="fab fa-twitter"></i>
           </a>
@@ -54,16 +54,16 @@
             <i class="fab fa-linkedin"></i>
           </a>
         </li>
-      -->
+      
         <li>
           <a href="https://www.twitter.com">
             <i class="fab fa-youtube"></i>
           </a>
-        </li>
+        </li>-->
 
 
         <li>
-          <a href=<a href="https://www.instagram.com/chattelboard/">
+          <a href=<a href="https://www.instagram.com/chattelsummer/">
             <i class="fab fa-instagram"></i>
           </a>
         </li>
