--- a/mail.html
+++ b/mail.html
@@ -76,7 +76,7 @@
         <form class="contact" action="https://formsubmit.co/chattelenterprise@gmail.com" method="post"><br><br>
           <input type="text" name="name" class="text-box" placeholder="Your Name" required><br><br>
           <input type="email" name="email" class="text-box" placeholder="Your Email" required><br><br>
-        <label for="phone">Get Reminders via Whatsapp too</label>  
+        <label for="phone">Get Reminders via Whatsapp too (optional)</label>  
         <input type="tel" name="cellphone" class="text-box" placeholder="1(246)-123-4567" 
         pattern="[0-9]{1}-[0-9]{3}-[0-9]{3}-[0-9]{4}"> 
           <!--<textarea name="message" rows="5" placeholder="Your Message" ></textarea>--><br><br>
