--- a/how-it-works.html
+++ b/how-it-works.html
@@ -8,7 +8,9 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
 
-    <title>How it Works</title>
+    <title>Shopping Day Instructions:How it Works</title>
+    <meta name="keywords" content="Furnishings in Barbados ">
+    <meta name="description" content="Shop furnishings to save space, home decor update and match lifestyle in Barbados">
   </head>
   <body>
     <button class="sidebar-toggle">
