--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" name="viewport" content="width= device-width, initial-scale= 1">
+    
+
     <link rel="shortcut icon" type="x-icon" href="Images/Your paragraph text.png">
     <link rel="stylesheet" href="index3.css" />
     <link rel="stylesheet" href="navbar.css" />
@@ -9,7 +11,10 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
 
-    <title>Re-Live Pieces</title>
+    <title>Chattel Summer|Better Furniture to Fit Your Lifestyle</title>
+    <meta name="keywords" content="House Furniture">
+    <meta name="description" content="Invest in quality preowned, gently-used cupboards, Table, Chairs for Living, dining and 
+    bedrooms fairly priced">
   </head>
   <body>
     <button class="sidebar-toggle">
@@ -19,7 +24,7 @@
     <aside class="sidebar">
       <div class="sidebar-header">
         <button class="close-btn"><i class="fas fa-times"></i></button>
-        <img src="Images/Your paragraph text.png" class="logophoto" alt="chattel Summer logo" />
+        <img src="Images/Your paragraph text.png" class="logophoto" alt="Chattel Summer logo" />
         <!--<button class="close-btn"><i class="fas fa-times"></i></button>-->
       </div>
       <!-- links -->
@@ -88,7 +93,7 @@
 
 <div class="row">
   <div class="column1">
-    <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
+    <img src="Images/beach-picnic.jpg" alt="Kitchen cupboards" style="width: 100%">
   </div>
 
   <div class="column3">
@@ -99,13 +104,13 @@
     <!--<p class="uppercase"></p><br>-->
   <p>LIMITED PIECES AVAILABLE</p>
   <p> In-person Drop: June 1</p><br>
-<a href="product.html" target="_self"><button class="filter-btn">Preview Photos</button></a>
+<a href="product.html" target="_self"><button class="filter-btn">Preview Furniture</button></a>
   </div>
 </div>
 
 <div class="row">
   <div class="column1">
-    <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
+    <img src="Images/beach-picnic.jpg" alt="Bedroom Cabinet" style="width: 100%">
   </div>
 
   <div class="column3">
@@ -116,13 +121,13 @@
     <!--<p class="uppercase"></p><br>-->
   <p>LIMITED PIECES AVAILABLE</p>
   <p> In-person Drop: June 1</p><br>
-<a href="https://www.instagram.com/chattelboard/" target="_self"><button class="filter-btn">Preview Videos</button></a>
+<a href="https://www.instagram.com/chattelboard/" target="_self"><button class="filter-btn">Furniture Videos</button></a>
   </div>
 </div>
 
 <div class="row">
   <div class="column0">
-    <img src="Images/beach-picnic.jpg" alt="picnic" style="width: 100%">
+    <img src="Images/beach-picnic.jpg" alt="Side Table" style="width: 100%">
   </div>
 
   <div class="column3">
@@ -324,7 +329,7 @@
             </div>
           </article>
 
-          <a href="how-it-works.html" target="_self"><p>Learn More</p></a>
+          <a href="how-it-works.html" target="_self"><p class="gold">Learn More</p></a>
           <!-- end of single question -->
       </section>
     </main>
