--- a/mail.html
+++ b/mail.html
@@ -9,6 +9,8 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
 
     <title>Drop Update</title>
+    <meta name="keywords" content="Home Makeover ">
+    <meta name="description" content="Furniture Shopping reminders for live shopping dates and new furniture">
   </head>
   <body>
     <button class="sidebar-toggle">
