--- a/product.html
+++ b/product.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1" />
     <title>Shop the Drop</title>
+    <meta name="keywords" content=" ">
+    <meta name="description" content="Shop Furniture that fits your life better. Find Bedroom, living room, 
+    dining room, tv room and bedroom wood furniture">
     <!-- font-awesome -->
 
     <!-- styles -->
