--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1" />
     <title>Shop the Drop</title>
-    <meta name="keywords" content=" ">
+    <meta name="keywords" content=" Furniture Shopping Barbados">
     <meta name="description" content="Shop Furniture that fits your life better. Find Bedroom, living room, 
     dining room, tv room and bedroom wood furniture">
     <!-- font-awesome -->
