--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"/>
 
-    <title>Chattel Summer|Better Furniture to Fit Your Lifestyle</title>
+    <title>Better Furniture makes Life Better|Chattel Summer</title>
     <meta name="keywords" content="House Furniture Barbados">
     <meta name="description" content="Invest in quality preowned, gently-used cupboards, Table, Chairs for Living, dining and 
     bedrooms fairly priced">
