Update Index and Product
Updated homepage and product page

--- a/product.html
+++ b/product.html
@@ -104,7 +104,7 @@
       <div class="item-info">
         <header>
           <h4>buttermilk pancakes</h4>
-          <h4 class="price">$15</h4>
+          <h4 class="price">$150 +</h4>
         </header>
         <p class="item-text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -131,6 +131,7 @@
     </article>
     <!-- end of single item -->
     <!-- single item3 -->
+    <!--
     <article class="menu-item">
       <img src="./menu-item.jpeg" alt="menu item" class="photo" />
       <div class="item-info">
@@ -144,7 +145,7 @@
           laboriosam excepturi! Quo, officia.
         </p>
       </div>
-    </article>
+    </article>-->
     <!-- end of single item -->
 </section>
 <div class="btn-container">
