--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 
   <div class="column3">
   <h1 class="uppercase">Photos</h1> <br>
-  <h4 class="uppercase">get ya life together</h4>
-  <h2 class="uppercase">Restock and reorganise</h2>
-  <p class="uppercase">with multi-shelf cabinets</p>
+  <h4 class="uppercase">Christmas Countdown Treats</h4>
+  <h2 class="uppercase">Refresh and reorganise</h2>
+  <p class="uppercase">with chairs, coffee table and multi-shelf cabinets</p>
     <!--<p class="uppercase"></p><br>-->
   <p>LIMITED PIECES AVAILABLE</p>
   <p> In-person Drop: June 1</p><br>
@@ -108,6 +108,7 @@
   </div>
 </div>
 
+<!--
 <div class="row">
   <div class="column1">
     <img src="Images/beach-picnic.jpg" alt="Bedroom Cabinet" style="width: 100%">
@@ -118,12 +119,12 @@
   <h4 class="uppercase">get ya life together</h4>
   <h2 class="uppercase">Clutter Free Pieces </h2>
   <p class="uppercase">for peace of mind</p>
-    <!--<p class="uppercase"></p><br>-->
+    <!--<p class="uppercase"></p><br>
   <p>LIMITED PIECES AVAILABLE</p>
   <p> In-person Drop: June 1</p><br>
 <a href="https://www.instagram.com/chattelboard/" target="_self"><button class="filter-btn">Furniture Videos</button></a>
   </div>
-</div>
+</div>-->
 
 <div class="row">
   <div class="column0">
@@ -173,7 +174,7 @@
       <p>We create new home comforts<br> 
         with home furnishings and<br> housewares
         for clutter-freeness,<br> organisation and
-        summer vacation-like enjoyment.</p>
+        holiday summer enjoyment.</p>
 
     </div>
       
@@ -294,8 +295,9 @@
             <!-- question text -->
             <div class="question-text">
               <p>
-              We are located in the island of Barbados
-              in Cane Garden, St.Andrew.
+              We host drops in showrooms islandwide. Be sure to sign up to 
+              stay in the know of upcoming shopping locations. 
+              .
               </p>
             </div>
           </article>
@@ -319,11 +321,11 @@
             <div class="question-text">
               <p>
               We do not offer returns or exchanges
-              at this time. All sales are final.
+              at this time. All sales are final and cash ONLY.
               Our objects have lived and therefore
               will have age and wear. Our items are
               sold as is so please inspect
-              before leaving Chattel.
+              before leaving Chattel Summer showrooms.
 
               </p>
             </div>
