--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <p class="uppercase">with chairs, coffee table and multi-shelf cabinets</p>
     <!--<p class="uppercase"></p><br>-->
   <p>LIMITED PIECES AVAILABLE</p>
-  <p> In-person Drop: June 1</p><br>
+  <p> In-person Drop: coming soon</p><br>
 <a href="product.html" target="_self"><button class="filter-btn">Preview Furniture</button></a>
   </div>
 </div>
@@ -148,8 +148,8 @@
 <!--Sart two-->
 <div class="container">
   <div class="content">
-    <h1> Next Drop: June 1</h1>
-    <p>Shop the drop <span>Sunday, 1 June 2023, 9:00am</span></p>
+    <h1> Next Drop: coming soon</h1>
+    <!--<p>Shop the drop <span>Sunday, 1 June 2023, 9:00am</span></p>-->
     <p id="demo"></p>
 
     <div id= "brand-promise">
