Updated product page
product page

--- a/product.html
+++ b/product.html
@@ -100,27 +100,28 @@
   <div class="section-center">
     <!-- single item1 -->
     <article class="menu-item">
-      <img src="Images/seaside_hammock.jpg" alt="menu item" class="photo" />
+      <img src="Images/Wood Glass Opening Coffee Table.webp" alt="menu item" class="photo" />
       <div class="item-info">
         <header>
-          <h4>buttermilk pancakes</h4>
-          <h4 class="price">$150 +</h4>
+          <h4>Wood Coffee Table</h4>
+          <h4 class="price">$300 </h4>
         </header>
         <p class="item-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Repudiandae, sint quam. Et reprehenderit fugiat nesciunt inventore
-          laboriosam excepturi! Quo, officia.
+          The coffee table features a dark wood that brings warmth into your sitting room 
+          for family get togethers or a quiet moment alone. 
+
+
         </p>
       </div>
     </article>
     <!-- end of single item -->
-    <!-- single item2 -->
+    <!-- single item2 --><!--
     <article class="menu-item">
       <img src="./menu-item.jpeg" alt="menu item" class="photo" />
       <div class="item-info">
         <header>
-          <h4>buttermilk pancakes</h4>
-          <h4 class="price">$15</h4>
+          <h4></h4>
+          <h4 class="price">$250.00</h4>
         </header>
         <p class="item-text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -128,7 +129,7 @@
           laboriosam excepturi! Quo, officia.
         </p>
       </div>
-    </article>
+    </article>-->
     <!-- end of single item -->
     <!-- single item3 -->
     <!--
