--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 <div class="row">
   <div class="column0">
-    <img src="Images/beach-picnic.jpg" alt="Side Table" style="width: 100%">
+    <img src="Images/tv-stands-lead-1673300741.jpg" alt="Side Table" style="width: 100%">
   </div>
 
   <div class="column3">
