--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
             <a href="index.html">our story</a>
           </li>
           <li>
-            <a href="about.html">contact us</a>
+            contact us: 1-246-830-4034
           </li>
           <li>
             <a href=".html"></a>
