--- a/product.html
+++ b/product.html
@@ -189,10 +189,10 @@
           <li>
             <a href="index.html">our story</a>
           </li>
-          <!--<li>
-            <a href="">contact us</a>
-          </li>
           <li>
+            contact us: 1-246-830-4034
+          </li>
+          <!--<li>
             <a href=".html"></a>
           </li>-->
         </ul>
