--- a/product.html
+++ b/product.html
@@ -100,18 +100,21 @@
   <div class="section-center">
     <!-- single item1 -->
     <article class="menu-item">
-      <img src="Images/Wood Glass Opening Coffee Table.webp" alt="menu item" class="photo" />
+      <img src="Images/tvarmoireosei.jpg" alt="menu item" class="photo" />
       <div class="item-info">
         <header>
-          <h4>Wood Coffee Table</h4>
-          <h4 class="price">$300 </h4>
+          <h4>TV armoire with Rattan Accents</h4>
+          <h4 class="price">$700 </h4>
         </header>
         <p class="item-text">
-          The coffee table features a dark wood that brings warmth into your sitting room 
-          for family get togethers or a quiet moment alone. 
-
+          This fabulous TV armoire features rattan accents on drawers and doors. Perfect for 
+    Mothers, Hosts who love neat spaces and adding warmth with brown furniture. 
+    Dimensions(inches): 78in(height) x 44in(width) x 25in(depth) 
+    Dimensions(feet): 6-6ft(height) x 3-8ft(width) x 2-1ft(depth)
+  
 
         </p>
+        
       </div>
     </article>
     <!-- end of single item -->
