--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
 <!--Sart two-->
 <div class="container">
   <div class="content">
-    <h1> Next Drop: coming soon</h1>
+    <h1> Next Drop: Baxters, St.Andrew BB</h1>
+    <h1> Directions: Whatsapp 1-246-830-4034</h1>
     <!--<p>Shop the drop <span>Sunday, 1 June 2023, 9:00am</span></p>-->
     <p id="demo"></p>
 
