--- a/product.html
+++ b/product.html
@@ -80,7 +80,7 @@
   <div class="title">
     <h2>Shop the Drop</h2>
     <div class="underline"></div>
-    <h3>location: TBA(To Be Announced)</h3>
+    <h3>location: Baxters, St. Andrew BB</h3>
   </div>
   <!-- filter buttons -->
   <div class="btn-container">
@@ -113,8 +113,8 @@
     Dimensions(feet): 6-6ft(height) x 3-8ft(width) x 2-1ft(depth)
   
 
-        </p>
-        
+         </p>
+
       </div>
     </article>
     <!-- end of single item -->
